--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -31,7 +31,7 @@
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="index.html#product-listing">PRODUCTS</a></li>
                     <li><a href="warranty-policies.html">WARRANTY POLICY</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
 
 
 
@@ -48,36 +48,38 @@
         <div class="row">
             <div class="blog-left">
                 <h2>Warranty Policies</h2>
-                <p>Dear valued users,
-                    Thank you very much for purchasing our products.
-                    At the same time,thank you for spending your time to read the product warranty terms.
-                    If you encounter technical problems or product quality problems when using our products, please send
-                    an email to pradeon2020@163.com for aftersales services.
-                    Aftersales commitments are as follows.</p>
+                <p>
+                    First of all, thank you for choosing us and taking the time to visit our website. If you have any
+                    queries or issues please feel free to send us a message on Facebook or please send us an email at
+                    support@gpuhub.tech anytime!
+                    The warranty policies of the Peladn graphics card that we sell are as follows.
+                </p>
                 <br>
                 <ul>
-                    <li>For mining: 3 monthes warranty</li>
-                    <li>For gaming: 1 year warranty</li>
+                    <li>For Gaming: 1 year warranty from Peladn</li>
                 </ul>
                 <br>
-                <p>Guarantee repair the condition of normal use and maintenance, if the product malfunctions due to the
-                    product's own quality problems within the 3-months/1-year warranty period.
-                    However, if the following situation occurs,it is not within the scope of free warranty. </p>
+                <p>
+                    Peladn will guarantee the repair for the condition of normal use and maintenance if the product
+                    malfunctions due to the product's quality problems within the 1-year warranty period. However, if
+                    the following situation occurs, it is not within the scope of the free warranty.
+                </p>
                 <br>
                 <ul>
-                    <li>Products misjudged by users.</li>
+
                     <li>The warranty period has expired.</li>
-                    <li>Failing to provide valid warranty certificate or altering product serial number without
+                    <li>Failing to provide a valid warranty certificate or altering product serial number without
                         permission.</li>
-                    <li>Damage caused by all human factors,such as unauthorized disassembly, modification,repair or
+                    <li>Damage caused by all human factors, such as unauthorized disassembly, modification, repair or
                         attempted repair by the user.</li>
                     <li>Damage caused by force majeure.</li>
-                    <li>Damage caused by improper transportation,use and storage by the user(including appearance
-                        deformation,scratches,loss of electronic components,PCB board deformation,collision.</li>
+                    <li>Damage caused by improper transportation, use and storage by the user(including appearance
+                        deformation, scratches, loss of electronic components, PCB board deformation, collision.</li>
                     <li>Surface abrasion and scratch of the product after normal use.</li>
                     <li>Failure or damage caused by software or virus. For the products exceeding the warranty period,
-                        if they are still repairable, we can provide paid maintenance services.</li>
-                    <li>Defective appearance of products (scratch, deformation, oxidation, corrosion, rust, fracture.
+                        if they are still repairable, Peladn can provide paid maintenance services.</li>
+                    <li>The defective appearance of products (scratch, deformation, oxidation, corrosion, rust,
+                        fracture.
                     </li>
                     <li>Product damage caused by modification or maintenance without permission, including the loss
                         and deformation of the iron baffle plate of the graphics card, the removal of the cooling fan or
@@ -86,11 +88,12 @@
                         altered or imitated.</li>
                     <li>When the BIOS content is modified without permission, or the BIOS chip is burned or lost.
                     </li>
-                    <li>When burnout, corrosion and damage detected on the chips.</li>
+                    <li>When burnout, corrosion and damage are detected on the chips.</li>
                 </ul>
 
             </div>
         </div>
+        <p class="warning">Disclaimer: Peladn will provide the warranty themselves. GPU HUB will not be responsible.</p>
     </section>
 
 
@@ -103,11 +106,18 @@
         <div class="icons">
             <a href="https://www.facebook.com/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
                     class="fa-brands fa-facebook-f"></i></a>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
+            <a href="https://m.me/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
+                    class="fa-brands fa-facebook-messenger"></i></a>
+            <a href="mailto:support@gpuhub.tech"><i class="fa-sharp fa-solid fa-envelope"></i></a>
+            <a href="https://www.facebook.com/groups/gpuhubbd" target="_blank" rel="noreferrer noopener"><i
+                    class="fa-solid fa-user-group"></i></a>
+
+
+
         </div>
     </section>
+
+
     <!-- ------- JavaScript for Toggle Menu ------- -->
 
     <script>
