--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a href="./index.html">HOME</a></li>
           <li><a href="#product-listing">PRODUCTS</a></li>
           <li><a href="warranty-policies.html">WARRANTY POLICY</a></li>
-          <li><a href="#">ABOUT</a></li>
+          <li><a href="about.html">ABOUT</a></li>
 
 
         </ul>
@@ -149,9 +149,14 @@
     <div class="icons">
       <a href="https://www.facebook.com/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
           class="fa-brands fa-facebook-f"></i></a>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-linkedin-in"></i>
+      <a href="https://m.me/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
+          class="fa-brands fa-facebook-messenger"></i></a>
+      <a href="mailto:support@gpuhub.tech"><i class="fa-sharp fa-solid fa-envelope"></i></a>
+      <a href="https://www.facebook.com/groups/gpuhubbd" target="_blank" rel="noreferrer noopener"><i
+          class="fa-solid fa-user-group"></i></a>
+
+
+
     </div>
   </section>
 
