--- a/products/RTX3060-product-page.html
+++ b/products/RTX3060-product-page.html
@@ -31,7 +31,7 @@
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../index.html#product-listing">PRODUCTS</a></li>
                     <li><a href="../warranty-policies.html">WARRANTY POLICY</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="../about.html">ABOUT</a></li>
 
 
                 </ul>
