--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     
     <h2 class="aboutheader">About us</h2>
     <div class="abouttxt">
-        <p>"We are company that started in the early 2023. We try to bring graphics cards at a low cost and provide them to our customers. <br> We might just be a small online based shop right now, but we promise we will try to provide you with graphics card at the most <br> affordable price in the market."</p>
+        <p>"We are company that started in the early 2023. We try to bring graphics cards at a low cost and provide them to our customers. <br> We might just be a small online based shop right now, but we promise we will try to provide you with graphics cards at the most <br> affordable price in the market."</p>
         <p style="padding-left: 31%;">- GPU HUB-</p>
     </div>
         <div class="abouticons">
