--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -2,15 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2H86JS76Q5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2H86JS76Q5');
-</script>
     <link class="icon" rel="shortcut icon" type="x-icon" href="./assets/images/logo.png">
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,6 +60,8 @@
                 </ul>
                 <br>
                 <p>
+                    GPU HUB will ensure it that you get in contact with Peladn, after that you have to send the GPU back
+                    to their factory yourself.
                     Peladn will guarantee the repair for the condition of normal use and maintenance if the product
                     malfunctions due to the product's quality problems within the 1-year warranty period. However, if
                     the following situation occurs, it is not within the scope of the free warranty.
