--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
             <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RX 580 2048SP</h5>
-              <p class="old-price"><s>৳ 12,500 </s></p>
+            <! --    <p class="old-price"><s>৳ 12,500 </s></p>  -->
               <p class="new-price">৳ 11,999 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">BUY
-                NOW</a>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
@@ -124,7 +123,7 @@
             <div class="card-body">
               <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
               <br>
-              <p class="new-pricent">৳ 15,000 </p>
+              <p class="new-pricent">৳ 17,999 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
