--- a/products/RX580-product-page.html
+++ b/products/RX580-product-page.html
@@ -59,7 +59,7 @@
 
                     <h1 class="display-5 fw-bolder">Peladn RX 580 2048SP</h1>
                     <div class="fs-5 mb-5">
-                        <span class="text-decoration-line-through" style="font-size: large;">BDT 12,500</span>
+                         <! -- <span class="text-decoration-line-through" style="font-size: large;">BDT 12,500</span> -->
                         <span style="color: red
                         ;font-size: larger;">BDT 11,999</span>
                     </div>
@@ -72,7 +72,7 @@
                         <a href="https://m.me/GPUHubBD" target="_blank"> <button
                                 class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
-                                BUY NOW
+                                PRE-ORDER
                             </button></a>
                     </div>
                 </div>
