--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -69,8 +69,9 @@
                 </ul>
                 <br>
                 <p>
-                    GPU HUB will ensure it that you get in contact with Peladn, after that you have to send the GPU back
-                    to their factory yourself.
+                    Peladn provides 2 years warranty with all the graphics card. But for the time being, GPU HUB will not be providing any warranty directly. In future, we plan to give warranty directly from GPU HUB. But for now, if you want to claim warranty then you have to contact Peladn yourself. 
+                    GPU HUB will ensure that you get in contact with Peladn, after that you have to send the GPU back
+                    to their factory yourself. And if they agree,
                     Peladn will guarantee the repair for the condition of normal use and maintenance if the product
                     malfunctions due to the product's quality problems within the 2-years warranty period. However, if
                     the following situation occurs, it is not within the scope of the free warranty.
@@ -85,12 +86,12 @@
                         attempted repair by the user.</li>
                     <li>Damage caused by force majeure.</li>
                     <li>Damage caused by improper transportation, use and storage by the user(including appearance
-                        deformation, scratches, loss of electronic components, PCB board deformation, collision.</li>
+                        deformation, scratches, loss of electronic components, PCB board deformation, collision.)</li>
                     <li>Surface abrasion and scratch of the product after normal use.</li>
                     <li>Failure or damage caused by software or virus. For the products exceeding the warranty period,
                         if they are still repairable, Peladn can provide paid maintenance services.</li>
                     <li>The defective appearance of products (scratch, deformation, oxidation, corrosion, rust,
-                        fracture.
+                        fracture.)
                     </li>
                     <li>Product damage caused by modification or maintenance without permission, including the loss
                         and deformation of the iron baffle plate of the graphics card, the removal of the cooling fan or
