--- a/products/RX580-product-page.html
+++ b/products/RX580-product-page.html
@@ -59,9 +59,9 @@
 
                     <h1 class="display-5 fw-bolder">Peladn RX 580 2048SP</h1>
                     <div class="fs-5 mb-5">
-                         <! -- <span class="text-decoration-line-through" style="font-size: large;">BDT 12,500</span> -->
-                        <span style="color: red
-                        ;font-size: larger;">BDT 11,999</span>
+                         <!-- <span class="text-decoration-line-through" style="font-size: large;">BDT 12,500</span> -->
+                        <span style="color: rgb(0, 0, 0)
+                        ;font-size: larger;">BDT 12,999</span>
                     </div>
                     <p class="lead" style="color: rgb(102, 100, 100);">The Peladn RX 580 2048SP provides good
                         performance for its price range. If you're looking for the best possible performance, the
