--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RX 580 2048SP</h5>
-            <! --    <p class="old-price"><s>৳ 12,500 </s></p>  -->
-              <p class="new-price">৳ 11,999 </p>
+            <!--    <p class="old-price"><s>৳ 12,500 </s></p>  -->
+              <p class="new-price" style="color: black;"> <br> ৳ 11,999 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
