--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -70,8 +70,8 @@
                 <br>
                 <p>
                     Peladn provides 2 years warranty with all the graphics card. But for the time being, GPU HUB will not be providing any warranty directly. In future, we plan to give warranty directly from GPU HUB. But for now, if you want to claim warranty then you have to contact Peladn yourself. 
-                    GPU HUB will ensure that you get in contact with Peladn, after that you have to send the GPU back
-                    to their factory yourself. And if they agree,
+                    GPU HUB will ensure that you get in contact with Peladn. After that you have to send the GPU back
+                    to their factory yourself if they agree.
                     Peladn will guarantee the repair for the condition of normal use and maintenance if the product
                     malfunctions due to the product's quality problems within the 2-years warranty period. However, if
                     the following situation occurs, it is not within the scope of the free warranty.
