--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2H86JS76Q5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2H86JS76Q5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-2H86JS76Q5');
-</script>
+    gtag('config', 'G-2H86JS76Q5');
+  </script>
   <link class="icon" rel="shortcut icon" type="x-icon" href="./assets/images/logo.png">
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,26 +61,29 @@
             <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RX 580 2048SP</h5>
-            <!--    <p class="old-price"><s>৳ 12,500 </s></p>  -->
-              <p class="new-price" style="color: black;"> <br> ৳ 12,999 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">PRE-ORDER</a>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col py-2">
-        <a class="product-cards" href="./products/RTX3060-product-page.html">
-          <div class="card" style="width: 18rem;">
-            <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">PELADN RTX 3060 12GB</h5>
-              <br>
-              <p class="new-pricent">৳ 52,000 </p>
+              <p class="old-price"><s>৳ 15,000 </s></p>
+              <p class="new-price" style="color: rgb(255, 0, 0);"> ৳ 10,990 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
+      </div>
+      <div class="col py-2">
+        <a class="product-cards" href="./products/RX5500XT-product-page.html">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
+
+              <p class="old-price"><s>৳ 20,990 </s></p>
+              <p class="new-pricent" style="color: red;">৳ 16,499 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">BUY
+                NOW</a>
+            </div>
+          </div>
+        </a>
+
       </div>
       <div class="col py-2">
         <a class="product-cards" href="./products/RX5700XT-product-page.html">
@@ -89,6 +92,7 @@
             <div class="card-body">
               <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
               <br>
+              <p><s></s></p>
               <p class="new-pricent">৳ 24,999 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
@@ -117,13 +121,13 @@
         </a>
       </div>
       <div class="col py-2">
-        <a class="product-cards" href="./products/RX5500XT-product-page.html">
+        <a class="product-cards" href="./products/RTX3060-product-page.html">
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
+            <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
+              <h5 class="card-title">PELADN RTX 3060 12GB</h5>
               <br>
-              <p class="new-pricent">৳ 17,999 </p>
+              <p class="new-pricent">৳ 52,000 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
@@ -153,7 +157,8 @@
 
   <section class="footer">
     <h4>About Us</h4>
-    <p class="footer-text">We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
+    <p class="footer-text">We import Graphics Cards and provide them to customers at an affordable price in Bangladesh!
+    </p>
     <div class="icons">
       <a href="https://www.facebook.com/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
           class="fa-brands fa-facebook-f"></i></a>
