--- a/products/RX5500XT-product-page.html
+++ b/products/RX5500XT-product-page.html
@@ -50,7 +50,7 @@
         </nav>
     </section>
 
-    <!----------- RX 580 Product Page --------->
+    <!----------- RX 5500XT Product Page --------->
     <section class="py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
@@ -60,18 +60,17 @@
 
                     <h1 class="display-5 fw-bolder">PELADN RX 5500 XT 8G</h1>
                     <div class="fs-5 mb-5">
-
-                        <span style="color: rgb(0, 0, 0)
-                        ;font-size: larger;">&nbsp;BDT 17,999</span>
+                        <span class="text-decoration-line-through" style="font-size: large;">BDT 20,990</span> 
+                        <span style="color: rgb(255, 0, 0)
+                        ;font-size: larger;">&nbsp;BDT 16,499</span>
                     </div>
-                    <p class="lead" style="color: red">*Currently, this GPU is out of stock. We can bring it for you if
-                        you order from us.</p>
+                    <p class="lead" style="color: rgb(0, 0, 0)">The RX 5500XT is one of the best buys you can get under 20 thousand taka. It has a 8GB VRAM which is sufficient to run almost all the modern triple A titles at good FPS.</p>
                     <div class="d-flex">
 
                         <a href="https://m.me/GPUHubBD" target="_blank"> <button
                                 class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
-                                PRE-ORDER
+                                BUY NOW
                             </button></a>
                     </div>
                 </div>
