--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-      <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2H86JS76Q5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2H86JS76Q5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-2H86JS76Q5');
-</script>
+        gtag('config', 'G-2H86JS76Q5');
+    </script>
     <link class="icon" rel="shortcut icon" type="x-icon" href="./assets/images/logo.png">
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,9 +69,13 @@
                 </ul>
                 <br>
                 <p>
-                    Peladn provides 2 years warranty with all the graphics card. But for the time being, GPU HUB will not be providing any warranty directly. In future, we plan to give warranty directly from GPU HUB. But for now, if you want to claim warranty then you have to contact Peladn yourself. 
-                    GPU HUB will ensure that you get in contact with Peladn. After that you have to send the GPU back
-                    to their factory yourself if they agree.
+                    Peladn provides 2 years warranty with all the graphics card. But for the time being, GPU HUB will
+                    not be providing any warranty directly. In future, we plan to give warranty directly from GPU HUB.
+                    But for now, if you want to claim warranty then you have to contact Peladn yourself.
+                    GPU HUB will ensure that you get in contact with Peladn. But GPU HUB won't be responsible for
+                    providing any warranty. It is totally between the you and Peladn. And if Peladn agrees to provide
+                    you the warranty for your specific issue, after that you have to send the GPU back
+                    to their factory yourself.
                     Peladn will guarantee the repair for the condition of normal use and maintenance if the product
                     malfunctions due to the product's quality problems within the 2-years warranty period. However, if
                     the following situation occurs, it is not within the scope of the free warranty.
