--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="card-body">
               <h5 class="card-title">PELADN RX 580 2048SP</h5>
               <p class="old-price"><s>৳ 15,000 </s></p>
-              <p class="new-price" style="color: rgb(255, 0, 0);"> ৳ 10,990 </p>
+              <p class="new-price" style="color: rgb(255, 0, 0);"> ৳ 14,990 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
@@ -78,8 +78,8 @@
 
               <p class="old-price"><s>৳ 20,990 </s></p>
               <p class="new-pricent" style="color: red;">৳ 16,499 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">BUY
-                NOW</a>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
+                rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
@@ -91,9 +91,9 @@
             <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
-              <br>
-              <p><s></s></p>
-              <p class="new-pricent">৳ 24,999 </p>
+
+              <p class="old-price"><s>৳ 42,000 </s></p>
+              <p class="new-pricent" style="color: red;">৳ 25,990 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
