--- a/products/RX5700XT-product-page.html
+++ b/products/RX5700XT-product-page.html
@@ -60,9 +60,9 @@
 
                     <h1 class="display-5 fw-bolder">PELADN RX 5700 XT 8G</h1>
                     <div class="fs-5 mb-5">
-
-                        <span style="color: rgb(0, 0, 0)
-                        ;font-size: larger;">&nbsp;BDT 24,999</span>
+                        <span class="text-decoration-line-through" style="font-size: large;">BDT 42,000</span> 
+                        <span style="color: rgb(255, 0, 0)
+                        ;font-size: larger;">&nbsp;BDT 25,990</span>
                     </div>
                     <p class="lead" style="color: red">*Currently, this GPU is out of stock. We can bring it for you if
                         you order from us.</p>
