--- a/products/RX5500XT-product-page.html
+++ b/products/RX5500XT-product-page.html
@@ -70,7 +70,7 @@
                         <a href="https://m.me/GPUHubBD" target="_blank"> <button
                                 class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
-                                BUY NOW
+                                PRE-ORDER
                             </button></a>
                     </div>
                 </div>
