--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="card-body">
               <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
 
-              <p class="old-price"><s>৳ 42,000 </s></p>
+              <p class="old-price"><s>৳ 32,000 </s></p>
               <p class="new-pricent" style="color: red;">৳ 25,990 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
@@ -135,13 +135,13 @@
         </a>
       </div>
       <div class="col py-2">
-        <a class="product-cards" href="./products/RTX2060-product-page.html">
+        <a class="product-cards" href="./products/RX6500XT-product-page.html">
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
+            <img src="./assets/images/rx6500xtlisting.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">PELADN RTX 2060 6G</h5>
+              <h5 class="card-title">PELADN RX 6500XT 4G</h5>
               <br>
-              <p class="new-pricent">৳ 30,999 </p>
+              <p class="new-pricent">৳ 25,499 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
