--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <div class="card-body">
               <h5 class="card-title">PELADN RX 580 2048SP</h5>
               <p class="old-price"><s>৳ 15,000 </s></p>
-              <p class="new-price" style="color: rgb(255, 0, 0);"> ৳ 14,990 </p>
+              <p class="new-price" style="color: rgb(255, 0, 0);"> ৳ 12,500 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
-                rel="noreferrer noopener">PRE-ORDER</a>
+                rel="noreferrer noopener">ORDER NOW</a>
             </div>
           </div>
         </a>
@@ -107,13 +107,14 @@
 
     <div class="row gpu-grid2">
       <div class="col py-2">
-        <a class="product-cards" href="./products/RTX3050-product-page.html">
+        <a class="product-cards" href="./products/RTX2060-product-page.html">
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
+            <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">PELADN RTX 3050 8G</h5>
-              <br>
-              <p class="new-pricent">৳ 39,990 </p>
+              <h5 class="card-title">PELADN RTX 2060 SUPER</h5>
+
+              <p class="old-price"><s>৳ 30,000 </s></p>
+              <p class="new-pricent" style="color: red;">৳ 24,990 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
@@ -121,13 +122,13 @@
         </a>
       </div>
       <div class="col py-2">
-        <a class="product-cards" href="./products/RTX3060-product-page.html">
+        <a class="product-cards" href="./products/RTX3070-product-page.html">
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
+            <img src="./assets/images/rtx3070listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">PELADN RTX 3060 12GB</h5>
-              <br>
-              <p class="new-pricent">৳ 52,000 </p>
+              <h5 class="card-title">PELADN RTX 3070 BAIKAI</h5>
+              <p class="old-price"><s>৳ 59,000 </s></p>
+              <p class="new-pricent" style="color: red;">৳ 45,990 </p>
               <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
                 rel="noreferrer noopener">PRE-ORDER</a>
             </div>
