--- a/products/RX580-product-page.html
+++ b/products/RX580-product-page.html
@@ -61,7 +61,7 @@
                     <div class="fs-5 mb-5">
                         <span class="text-decoration-line-through" style="font-size: large;">BDT 15,000</span>
                         <span style="color: rgb(255, 0, 0)
-                        ;font-size: larger;">BDT 14,990</span>
+                        ;font-size: larger;">BDT 12,500</span>
                     </div>
                     <p class="lead" style="color: rgb(102, 100, 100);">The Peladn RX 580 2048SP provides good
                         performance for its price range. If you're looking for the best possible performance, the
@@ -72,7 +72,7 @@
                         <a href="https://m.me/GPUHubBD" target="_blank"> <button
                                 class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
-                                PRE-ORDER
+                                ORDER NOW
                             </button></a>
                     </div>
                 </div>
