--- a/products/RTX2060-product-page.html
+++ b/products/RTX2060-product-page.html
@@ -58,11 +58,11 @@
                         alt="..." /></div>
                 <div class="col-md-6">
 
-                    <h1 class="display-5 fw-bolder">PELADN RTX 2060 6G</h1>
+                    <h1 class="display-5 fw-bolder">PELADN RTX 2060 SUPER 8G </h1>
                     <div class="fs-5 mb-5">
-
-                        <span style="color: rgb(0, 0, 0)
-                        ;font-size: larger;">&nbsp;BDT 30,999</span>
+                        <span class="text-decoration-line-through" style="font-size: large;">BDT 30,000</span>
+                        <span style="color: rgb(255, 0, 0)
+                        ;font-size: larger;">BDT 24,990</span>
                     </div>
                     <p class="lead" style="color: red">*Currently, this GPU is out of stock. We can bring it for you if
                         you order from us.</p>
