--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -69,11 +69,10 @@
                 </ul>
                 <br>
                 <p>
-                    Peladn provides 2 years warranty with all the graphics card. But for the time being, GPU HUB will
-                    not be providing any warranty directly. In future, we plan to give warranty directly from GPU HUB.
-                    But for now, if you want to claim warranty then you have to contact Peladn yourself.
-                    GPU HUB will ensure that you get in contact with Peladn. But GPU HUB won't be responsible for
-                    providing any warranty. It is totally between the you and Peladn. And if Peladn agrees to provide
+                    Peladn provides 2 years warranty with all the graphics card. But GPU HUB will
+                    not be providing any warranty.
+                    If you want to claim warranty then you have to contact Peladn yourself.
+                    It is totally between the you and Peladn. And if Peladn agrees to provide
                     you the warranty for your specific issue, after that you have to send the GPU back
                     to their factory yourself.
                     Peladn will guarantee the repair for the condition of normal use and maintenance if the product
@@ -109,7 +108,7 @@
 
             </div>
         </div>
-        <p class="warning">Disclaimer: Peladn will provide the warranty themselves. GPU HUB will not be responsible.</p>
+        <p class="warning">Disclaimer: GPU HUB will not provide any warranty.</p>
     </section>
 
 
